--- a/package.json
+++ b/package.json
@@ -10,16 +10,6 @@
     "lint": "npx eslint src/**/*.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "extends": [
-      "airbnb-base",
-      "plugin:@typescript-eslint/recommended"
-    ],
-    "plugins": [
-      "@typescript-eslint"
-    ]
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -28,6 +18,7 @@
     "@types/node": "^20.4.2",
     "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
@@ -36,6 +27,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.4"
   }
