--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.2",
+    "@types/nodemailer": "^6.4.9",
     "@types/validator": "^13.7.17",
     "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -35,6 +36,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
+    "nodemailer": "^6.9.4",
+    "uuid": "^9.0.0",
     "validator": "^13.9.0"
   }
 }
